# docker

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.clang-mpich-dev  Dockerfile.gnu-openmpi-dev  Dockerfile.gnu-openmpi-tut  Dockerfile.intel-oneapi-dev  README.md  README.rst  Singularity.gnu-openmpi-tut  bitbucket-pipelines.yml  build_container.sh  build_tut_container.sh  docker-compose.yml  docker_clean.bash  id_rsa  push_beta_to_latest.sh
CMake/: FindCDO.cmake  FindESMF.cmake  FindGRIBAPI.cmake  FindMPI.cmake  FindNCO.cmake  FindNetCDF_C.cmake  FindNetCDF_CXX.cmake  FindNetCDF_Fortran.cmake  FindSZIP.cmake  jedi_check_cmake_https.cmake  jedi_check_depends_and_install_packages.cmake  jedi_external_proj_depends.cmake  jedi_install_ANTLR.cmake  jedi_install_Armadillo.cmake  jedi_install_BOOST.cmake  jedi_install_CDO.cmake  jedi_install_ESMF.cmake  jedi_install_Eigen3.cmake  jedi_install_Freetype.cmake  jedi_install_GRIBAPI.cmake  jedi_install_HDF5.cmake  jedi_install_JPEG.cmake  jedi_install_Jasper.cmake  jedi_install_LAPACK.cmake  jedi_install_MPI.cmake  jedi_install_NCO.cmake  jedi_install_NetCDF.cmake  jedi_install_NetCDF_C.cmake  jedi_install_NetCDF_CXX.cmake  jedi_install_NetCDF_Fortran.cmake  jedi_install_PIO.cmake  jedi_install_PNETCDF.cmake  jedi_install_PNG.cmake  jedi_install_SZIP.cmake  jedi_install_SZip.cmake  jedi_install_UDUNITS2.cmake  jedi_install_XercesC.cmake  jedi_install_ZLIB.cmake  jedi_install_cdo.cmake  jedi_install_grib_api.cmake  (+1 more)
UFS/: Dockerfile.jopa-gnu-ompi-ufs-dev
UKMO/: Dockerfile.jedi-ops-um  Dockerfile.jopa-gnu-ompi-base  Dockerfile.jopa-gnu-ompi-ci  Dockerfile.jopa-gnu-ompi-dev  build_container.sh
tutorial/tut1/: run.bash
tutorial/tut1/conf/: hyb-3dvar-diffstates.yaml
tutorials/: pull_test_data.sh  push_test_data.sh
tutorials/run-jedi/: run.bash
tutorials/run-jedi/conf/: hyb-3dvar-bumppar_cor.yaml  hyb-3dvar-bumppar_loc.yaml  hyb-3dvar-diffstates.yaml  hyb-3dvar.yaml  hyb-4dvar-bumppar_cor.yaml  hyb-4dvar-bumppar_loc.yaml  hyb-4dvar-diffstates.yaml  hyb-4dvar.yaml
